tests/NormalTests/paczka1/fuzzy1/95559719.err
Error in line 12: kXuhJ9TsV S800 27,5
Error in line 28: A209 S767 54,2
